成绩栏更新

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <li class="list-group-item bg-transparent border-0">
               <span>毕业院校：</span><span>电子科技大学</span></li>
             <li class="list-group-item bg-transparent border-0">
-              <span>学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;历：</span><span>硕士</span>
+              <span>学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;历：</span><span>在读硕士</span>
             </li>
             <li class="list-group-item bg-transparent border-0">
               <span>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：</span><a class="text-warning" href="mailto:ZJ.Cosmos@gmail.com">ZJ.Cosmos@gmail.com</a>
@@ -143,7 +143,7 @@
               <span>电&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;话：</span><span>182****5460</span>
             </li>
             <li class="list-group-item bg-transparent border-0">
-              <span>爱&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;好：</span><span>动漫</span>
+              <span>爱&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;好：</span><span>编程 动漫</span>
             </li>
           </ul>
         </div>
@@ -171,7 +171,7 @@
                 <div class="events-header">基于Java的图书管理系统 本科课程设计</div>
                 <div class="events-body">
                   <div class="row">
-                    <div class="col-md-auto">
+                    <div class="col-md-auto img_contain">
                       <img class="events-object img-fluid img-thumbnail" src="img/work_library_app.jpg" alt="图书管理系统手机APP图片"/>
                     </div>
                     <div class="events-desc">
@@ -210,7 +210,7 @@
                 <div class="events-header">物联网数据采集系统 主要开发人员</div>
                 <div class="events-body">
                   <div class="row">
-                    <div class="col-md-auto">
+                    <div class="col-md-auto img_contain">
                       <img class="events-object img-fluid img-thumbnail" src="img/work_data_acquire.jpg" alt="物联网数据采集系统前端页面图片"/>
                     </div>
                     <div class="events-desc">
@@ -251,7 +251,7 @@
                 <div class="events-header">智能电网攻防研究 主要研究人员</div>
                 <div class="events-body">
                   <div class="row">
-                    <div class="col-md-auto">
+                    <div class="col-md-auto img_contain">
                       <img class="events-object img-fluid img-thumbnail" src="img/work_electric_attack.jpg" alt="智能电网攻击软件图片"/>
                     </div>
                     <div class="events-desc">
@@ -317,6 +317,12 @@
               </li>
               <li class="list-group-item">
                 <span>2017.10</span>&nbsp;<span>研究生 学业一等奖学金</span>
+              </li>
+              <li class="list-group-item">
+                <span>2018.10</span>&nbsp;<span>研究生 学业一等奖学金</span>
+              </li>
+              <li class="list-group-item">
+                <span>2018.12</span>&nbsp;<span>研究生 优秀研究生称号</span>
               </li>
               <li class="list-group-item">
                 <span class="btn text-success" data-toggle="modal" data-target="#undergraduate_grade">本科成绩单</span>
