--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="graduate_grade_title">本科成绩单</h5>
+        <h5 class="modal-title" id="graduate_grade_title">研究生成绩单</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
