--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <!--<div class="card-header h5" style="background: transparent;border: none;">个人资料</div>-->
           <ul class="list-group list-group-flush allow_user_select">
             <li class="list-group-item bg-transparent border-0">
-              <span>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：</span><span>And-ZJ</span>
+              <span>昵&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称：</span><span>And-ZJ</span>
             </li>
             <li class="list-group-item bg-transparent border-0">
               <span>性&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别：</span><span>男</span>
@@ -205,9 +205,9 @@
             </dd>
             <dd class="pos-right clearfix">
               <div class="circ"></div>
-              <div class="time">2016.12-2017.09</div>
+              <div class="time">2017.03-2017.09</div>
               <div class="events">
-                <div class="events-header">物联网数据采集系统 主要开发人员</div>
+                <div class="events-header">物联网安全数据采集模块 主要开发人员</div>
                 <div class="events-body">
                   <div class="row">
                     <div class="col-md-auto img_contain">
@@ -217,10 +217,10 @@
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item">
                           <span class="text-primary">项目介绍：</span>
-                          该系统采集工作控制器（PLC）的过程数据并存储，通过工控组态软件远程监各个控制器的运行状态，由PLC采集器、数据采集器管理客户端、数据存储服务器构成
+                          该研究依托于工业信息安全防护系统研究项目，针对工业采集设备的安全问题，设计并开发了基于树莓派的物联网安全采集模块，使用ModbusTcp协议采集工业控制器（PLC）的过程数据，同时开发了前端状态监控界面，可用于监控和配置采集设备
                         </li>
                         <li class="list-group-item allow_user_select">
-                          <span class="text-primary">技术路线：</span>Python、Flask、Bootstrap、MySQL、Redis、VPN
+                          <span class="text-primary">技术路线：</span>Python、Flask、Bootstrap、MySQL、Redis、HTML+JS+CSS
                         </li>
                         <li class="list-group-item">
                           <span class="text-primary">主要贡献：</span>
@@ -233,7 +233,7 @@
                         </li>
                         <li class="list-group-item">
                           <span class="text-primary">遗憾之事：</span>
-                          本来有打算引入Docker的，研究了几天Docker之后，发觉有一些操作设计到本机，不适合在Docker中部署此项目，就放弃了。可能是我研究的不够深入吧。
+                          本来有打算引入Docker的，研究了几天Docker之后，发觉有一些操作设计到本机（如iptables命令的操作），不适合在Docker中部署此项目，就放弃了。可能是我研究的不够深入吧。
                         </li>
                       </ul>
                     </div>
@@ -258,14 +258,14 @@
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item">
                           <span class="text-primary">项目介绍：</span>
-                          该项目依托于工业信息安全防护系统研究，旨在研究智能电网这一特殊工控环境下的网络攻防问题
+                          该研究依托于工业信息安全防护系统研究项目，旨在研究智能电网这一特殊工控环境下的网络攻防问题
                         </li>
                         <li class="list-group-item allow_user_select">
                           <span class="text-primary">技术路线：</span>Linux、iptables、Wireshark、Python
                         </li>
                         <li class="list-group-item">
                           <span class="text-primary">主要贡献：</span>
-                          主要研究了智能电网设备中的通信协议，并使用Python构造攻击数据包进行攻击。
+                          主要研究了智能电网设备中的通信协议，并使用Python构造攻击数据包进行攻击。在温江某基地对电网控制柜设备成功实现了重放包、ARP欺骗、SYN洪水等攻击。
                         </li>
                         <li class="list-group-item">
                           <span class="text-primary">收获体会：</span>
@@ -273,6 +273,114 @@
                           在业余时候，还编写过动态爬虫，比如，
                           <a class="text-success" href="https://github.com/And-ZJ/DynamicCrawler"
                              target="_blank">爬取某动漫网站的漫画图片</a>。
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="events-footer"></div>
+              </div>
+            </dd>
+            <dd class="pos-right clearfix">
+              <div class="circ"></div>
+              <div class="time">2017.03-2018.07</div>
+              <div class="events">
+                <div class="events-header">工业物联网信息安全研究 通信模块负责人</div>
+                <div class="events-body">
+                  <div class="row">
+                    <div class="col-md-auto img_contain">
+                      <img class="events-object img-fluid img-thumbnail" src="img/industrial_information_security_client.jpg" alt="工业信息安全配置监控客户端（界面并不是我做的）"/>
+                    </div>
+                    <div class="events-desc">
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                          <span class="text-primary">项目介绍：</span>
+                          针对工业4.0的工业环境中面临的网络安全隐患，设计并开发相应的工业信息安全防护系统。该系统主要由位于Linux系统端的防护模块后台和位于监控主机上桌面管理客户端两部分组成
+                        </li>
+                        <li class="list-group-item allow_user_select">
+                          <span class="text-primary">技术路线：</span>Linux、C++、Qt
+                        </li>
+                        <li class="list-group-item">
+                          <span class="text-primary">主要贡献：</span>
+                          <div>对已开发的客户端管理软件制定了基于Qt的跨平台重构策略。</div>
+                          <div>对已开发的C#(WPF)客户端管理软件制定了基于C++(Qt)的跨平台重构策略。</div>
+                          <div>针对防护模块后台和监控客户端的通信安全问题，设计并开发基于UDP协议的通信模块，该模块实现了加密解密、自定义协议的封装与解析、批量命令发送与自动监听等主要功能。难点在于多线程的使用和协议的设计。</div>
+                        </li>
+                        <li class="list-group-item">
+                          <span class="text-primary">收获体会：</span>
+                          通过这个项目，对网络通信要更熟悉了一些，可以说这部分代码是我写的较为满意的代码之一。主要解决了之前C#版本通信中几大问题：(1)没有加密数据;(2)自定义协议不能升级，无法向前兼容;(3)自定义协议中命令格式单一，无法添加新指令;(4)自定义协议可能遭受重放包攻击;(5)未封装发送和监听模块，不能发送批量数据以及监听;(6)未采用多线程进行监听，主界面经常无响应。
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="events-footer"></div>
+              </div>
+            </dd>
+            <dd class="pos-left clearfix">
+              <div class="circ"></div>
+              <div class="time">2018.08-2018.11</div>
+              <div class="events">
+                <div class="events-header">基于智能制造的智能工厂研究 负责人之一</div>
+                <div class="events-body">
+                  <div class="row">
+                    <div class="col-md-auto img_contain">
+                      <img class="events-object img-fluid img-thumbnail" src="img/smart_factory_monitor.jpg" alt="智能工厂前端监控界面图片"/>
+                    </div>
+                    <div class="events-desc">
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                          <span class="text-primary">项目介绍：</span>
+                          基于学院的智能制造实验室，研究智能工厂设想和理念实现。主要包含智能环境感知、高精度AGV定位、AI应用研究、工业信息安全等内容。
+                        </li>
+                        <li class="list-group-item allow_user_select">
+                          <span class="text-primary">技术路线：</span>Linux、Python、MQTT
+                        </li>
+                        <li class="list-group-item">
+                          <span class="text-primary">主要贡献：</span>
+                          <div>参与制定实验室研究方向和内容，搭建实验室物联网环境，负责智能环境感知部分的研究。</div>
+                          <div>搭建基于MQTT协议的多机（传感器、AGV、生产线、PC主机等）协同通信网络。并制定自定义的MQTT消息填写规范，以及各类消息Topic的规范，其他内容的研究均以此网络为基础。</div>
+                          <div>使用物联网安全采集设备，对实验内各类传感器、生产线等设备的数据进行采集、发送等。</div>
+                        </li>
+                        <li class="list-group-item">
+                          <span class="text-primary">收获体会：</span>
+                          最开始是利用Django+Websocket搭建的通信网络，途中发现MQTT这个面向物联网的通信协议非常适合，因为很多涉及到设备与设备之间的通信，使用Django作为中转服务器还需要自己定义中转规则和消息规则，不如MQTT直接就是面向这种物联网环境的协议，所以就换了方案。
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="events-footer"></div>
+              </div>
+            </dd>
+            <dd class="pos-right clearfix">
+              <div class="circ"></div>
+              <div class="time">2018.11-至今</div>
+              <div class="events">
+                <div class="events-header">雷达设备的故障诊断研究 核心算法研究</div>
+                <div class="events-body">
+                  <div class="row">
+                    <div class="col-md-auto img_contain">
+                      <img class="events-object img-fluid img-thumbnail" src="img/fault_detection.jpg" alt="正常数据与异常数据对比图片"/>
+                    </div>
+                    <div class="events-desc">
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                          <span class="text-primary">项目介绍：</span>
+                          研究雷达设备在图像成像质量变差时的故障诊断方法。通过故障推理方法，找到故障原因。
+                        </li>
+                        <li class="list-group-item allow_user_select">
+                          <span class="text-primary">技术路线：</span>Python、机器学习算法等
+                        </li>
+                        <li class="list-group-item">
+                          <span class="text-primary">主要贡献：</span>
+                          研究基于机器学习的故障诊断算法（一篇会议论文在审）。
+                          <div>目前研究的故障诊断方法：PCA和DPCA（T2统计量、SPE统计量）、ICA和DICA（I2统计量，AO统计量）、SVM等。部分内容可在个人CSDN上找到。</div>
+                          <div>难点：第一点是文献大部分是英文的，影响阅读效率，第二点是数学原理较多，需要反复阅读、思考和实践。</div>
+                        </li>
+                        <li class="list-group-item">
+                          <span class="text-primary">收获体会：</span>
+                          其中一个较为开心的事是给知名的统计库<a href="https://github.com/statsmodels/statsmodels">statmodels</a>提交了我的第一个<a href="https://github.com/statsmodels/statsmodels/issues/5395">issue</a>，并得到了对方的采纳。该库在实现AO统计量的算法时，没有按照原论文的方法实现，从而在某些特殊数据下，得到的结果不对。
                         </li>
                       </ul>
                     </div>
@@ -324,9 +432,9 @@
               <li class="list-group-item">
                 <span>2018.12</span>&nbsp;<span>研究生 优秀研究生称号</span>
               </li>
-              <li class="list-group-item">
-                <span class="btn text-success" data-toggle="modal" data-target="#undergraduate_grade">本科成绩单</span>
-              </li>
+              <!--<li class="list-group-item">-->
+                <!--<span class="btn text-success" data-toggle="modal" data-target="#undergraduate_grade">本科成绩单</span>-->
+              <!--</li>-->
               <li class="list-group-item">
                 <span class="btn text-success" data-toggle="modal" data-target="#graduate_grade">研究生成绩单</span>
               </li>
@@ -366,21 +474,21 @@
             <ul class="list-group list-group-flush bg-transparent">
               <li class="list-group-item">
                 <span class="text-primary">编程技能：</span>
-                <span>熟悉C、C++、Java、Python等语言，使用C、C++进行常用算法（如贪心、动态规划）设计</span>
+                <span>熟悉C、C++、Python等语言，了解Java、GO等语言，熟悉基本数据结构及算法（如贪心、动态规划）</span>
               </li>
               <li class="list-group-item">
                 <span class="text-primary">前端技能：</span>
-                <span>熟悉HTML、CSS、JS等前端语言，熟悉jQuery、Bootstrap等框架，熟练使用Ajax、DOM等操作、简单Qt界面绘制、
+                <span>熟悉HTML、CSS、JS等前端语言，熟悉jQuery、Bootstrap等框架，使用Ajax、DOM等操作、简单Qt界面绘制、
                 <a class="text-success" href="https://github.com/And-ZJ/TranslateHelper" target="_blank">简单编写Chrome浏览器插件</a>
                 </span>
               </li>
               <li class="list-group-item">
                 <span class="text-primary">后端技能：</span>
-                <span>熟悉Python的Flask、Django框架，使用过Java的SSH框架，使用Websocket开发实时通信，使用Python编写爬虫，简单Qt网络通信，Makefile基本知识，数据库的基本操作</span>
+                <span>链接Python的Flask、Django框架，使用过Java的SSH框架，使用Websocket开发实时通信，使用MQTT搭建物联网环境，使用Python编写爬虫，基于Qt的网络通信。</span>
               </li>
               <li class="list-group-item">
                 <span class="text-primary">其他技能：</span>
-                <span>Git常用操作，Docker基本知识，熟悉Linux操作系统，Linux下iptables的基本使用</span>
+                <span>了解Git、Docker、Makefile、SQL等基本操作，了解Linux操作系统，对信息安全、机器学习有一定的了解。</span>
               </li>
             </ul>
           </div>
@@ -391,37 +499,37 @@
 </div>
 
 <!-- 本科成绩单界面 -->
-<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" id="undergraduate_grade">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="undergraduate_grade_title">本科成绩单</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <img src="img/undergraduate_grade.jpg" alt="本科成绩单暂未上传">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
+<!--<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" id="undergraduate_grade">-->
+  <!--<div class="modal-dialog modal-dialog-centered" role="document">-->
+    <!--<div class="modal-content">-->
+      <!--<div class="modal-header">-->
+        <!--<h5 class="modal-title" id="undergraduate_grade_title">本科成绩单</h5>-->
+        <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+          <!--<span aria-hidden="true">&times;</span>-->
+        <!--</button>-->
+      <!--</div>-->
+      <!--<div class="modal-body">-->
+        <!--<img src="img/undergraduate_grade.jpg" alt="本科成绩单暂未找到">-->
+      <!--</div>-->
+      <!--<div class="modal-footer">-->
+        <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
 
-<!-- 本科成绩单界面 -->
+<!-- 研究生成绩单界面 -->
 <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" id="graduate_grade">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="graduate_grade_title">研究生成绩单</h5>
+        <h5 class="modal-title" id="graduate_grade_title">研究生成绩单（右键新标签页查看原图）</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <img src="img/graduate_grade.jpg" alt="研究生成绩单暂未上传">
+        <img src="img/graduate_grade_mask.jpg" alt="研究生成绩单加载失败" style="width:100%;">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
